fix: fixed hero image height on mobile

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -138,7 +138,7 @@
 @media screen and (max-width: 830px) {
   .container {
     flex-direction: column-reverse;
-    height: 100vh;
+    height: 100%;
   }
 
   .content {
